apps/minio/resources/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: minio-console
  annotations:
    kubernetes.io/ingress.class: traefik-external
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "MinIO"
    gethomepage.dev/group: "Infrastructure"
    gethomepage.dev/icon: "minio"
    gethomepage.dev/description: "S3 Storage"
    gethomepage.dev/href: "https://s3.cyphers.app"
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`s3.cyphers.app`)
      middlewares:
        - name: default-headers
          namespace: traefik
        - name: authentik-auth
          namespace: authentik
      services:
        - name: minio
          namespace: minio
          port: 9001
  tls:
    secretName: production-cyphers-app-tls
